# segfault

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  compose.yaml  docker-compose.yml  feat(verification)__add_VerificationCode.patch  package-lock.json  requirements.txt  sonar-project.properties  testscore.py
.github/workflows/: checks.yml  deploy.yml  pre-commit.yml
Backend/codesirius/: manage.py
Backend/codesirius/codesirius/: asgi.py  urls.py
backend/: .dockerignore  .gitignore  Dockerfile  requirements.dev.txt  requirements.txt
backend/codesirius/: .coveragerc  .env  .flake8  db.sqlite3  manage.py  mypy.ini  sonar-project.properties
backend/codesirius/authentication/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/codesirius/codesirius/: asgi.py  aws_client.py  codesirius_api_response.py  email_or_username_backend.py  exception_handler.py  kafa_producer.py  models.py  redis_client.py  settings.py  urls.py  views.py  wsgi.py
backend/codesirius/internal_api/: admin.py  auth.py  urls.py
backend/codesirius/problems/: admin.py  apps.py  signals.py  urls.py
backend/codesirius/tests/: test_aws_client.py  test_kafka_producer.py  test_redis_client.py
backend/sse/: Dockerfile  package-lock.json  package.json
backend/sse/src/: server.ts
consumers/email-consumer/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  sonar-project.properties
consumers/email-consumer/src/: email_consumer.py  main.py
consumers/email-consumer/src/email_consumer/: __init__.py  email_consumer.py
consumers/email-consumer/src/lib/: generate_html_verification_email.py
consumers/email-consumer/tests/: test_email_consumer.py
consumers/hidden-test-consumer/: .dockerignore  Dockerfile  pyproject.toml
consumers/hidden-test-consumer/src/: main.py
consumers/hidden-test-consumer/src/hidden_test_consumer/: __init__.py  consumer.py  hidden_test_process_pb2.py  hidden_test_process_pb2.pyi  hidden_test_process_pb2_grpc.py  logger.py  process.py
consumers/reference-solution-consumer/: Dockerfile  pyproject.toml
consumers/reference-solution-consumer/src/: main.py
consumers/reference-solution-consumer/src/code_executor/: python312.py
consumers/reference-solution-consumer/src/reference_solution_consumer/: __init__.py  consumer.py  logger.py  process.py  ref_sol_validation_process_pb2.py  ref_sol_validation_process_pb2.pyi  ref_sol_validation_process_pb2_grpc.py
consumers/reference-solution-consumer/src/reference_solution_consumer/protos/: ref_sol_validation_process.proto
consumers/submission-consumer/: language-image-map.json  pyproject.toml
consumers/submission-consumer/src/: main.py
consumers/submission-consumer/src/code_executor/: python312.py
consumers/submission-consumer/src/submission_consumer/: __init__.py  aws_client.py  consumer.py  process.py  submission_process_pb2.py  submission_process_pb2.pyi  submission_process_pb2_grpc.py
frontend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts  theme.ts  types.ts
frontend/src/app/: codesirius-app.tsx  layout.tsx  not-found.tsx  page.tsx  store-provider.tsx
frontend/src/components/: Accordion.tsx  BufferingDots.tsx  DifficultyBadge.tsx  Logs.tsx  ProblemCard.tsx  SplashScreen.tsx  (+12 more)
kafka/: docker-compose.yml
loki/config/: loki-config.yml
nginx/: nginx.conf
prometheus/config/: prometheus.yml
promtail/config/: promtail.yml
(+190 files in other folders)
