[project]
name = "email-consumer"
version = "0.1.0"
description = ""
authors = [
    {name = "parthokr",email = "partho.kr@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "base-consumer (>=0.1.2,<0.2.0)",
    "requests (>=2.32.3,<3.0.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"


[tool.poetry]
packages = [{include = "email_consumer", from = "src"}]

[tool.poetry.scripts]
email-consumer = "main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--cov-config=.coveragerc", "--cov=email_consumer", "--cov-report=xml", "--cov-report=term"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
