[project]
name = "hidden-test-consumer"
version = "0.1.0"
description = ""
authors = [
    {name = "parthokr",email = "partho.kr@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "hidden_test_consumer", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
